# WeedDiffusion

./: .gitignore  README.md  condor  data  lsb.ipynb  main.py  pyproject.toml  scripts.sh
classification/: module.py  train.py
classification/config/: config_deeplab.yaml  config_erfnet.yaml  config_unet.yaml
dreambooth/augmentation/: inpainting.ipynb  mask_reconstruction_crops.ipynb  remap_semantics.ipynb  weed_generation.ipynb  weeds_extraction.ipynb  weeds_injection.ipynb
dreambooth/training/: dreambooth.ipynb
dreambooth/utils/: cluster.ipynb  count_weeds.ipynb  get_groundtruth.ipynb
phenobench/semantic_segmentation/: main.py  pdc.py  train.py
phenobench/semantic_segmentation/config/: config_erfnet.yaml
phenobench/semantic_segmentation/datasets/: pdc.py
phenobench/semantic_segmentation/modules/: module.py
phenobench/semantic_segmentation/setup/: requirements.txt
preliminary_experiments/semantic_cut_out/: cutout_SAM.ipynb
semantic_segmentation/: test.py  train.py
semantic_segmentation/callbacks/: __init__.py  postprocessor.py  visualizer.py
semantic_segmentation/config/images_37/: config_deeplab_base.yaml  config_deeplab_color.yaml  config_deeplab_geo.yaml  config_deeplab_geocolor.yaml  config_erfnet.yaml  config_erfnet_base.yaml  config_erfnet_color.yaml  (+7 more)
semantic_segmentation/datasets/: augmentations_color.py  augmentations_geometry.py  image_normalizer.py  pdc.py
semantic_segmentation/modules/: __init__.py  module.py
weeddiff/: dreambooth.py  generate_weed.py  inpaint.py  make_subset.py  mask_reconstruction.py  train_diffuser.py
(+8 files in other folders)
