[project]
name = "semantic-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.45",
    "kornia>=0.8.2",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "onnxruntime>=1.23.2",
    "oyaml>=1.0",
    "pillow>=12.0.0",
    "scikit-image>=0.25.2",
    "tifffile>=2025.10.16",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "wget>=3.2",
]
